crates/test-ui/ui/define_class_invalid_type.stderr
error[E0277]: the trait bound `Vec<()>: Encode` is not satisfied
 --> ui/define_class_invalid_type.rs
  |
  | / define_class!(
  | |     #[unsafe(super(NSObject))]
  | |     struct CustomObject;
... |
  | | );
  | |_^ the trait `Encode` is not implemented for `Vec<()>`
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `Vec<()>` to implement `EncodeReturn`
  = note: required for `Vec<()>` to implement `objc2::__macros::ConvertReturn<objc2::__macros::MethodFamily<6>>`
  = note: required for `objc2::__macros::MethodFamily<6>` to implement `objc2::__macros::RetainSemantics<&AnyClass, Vec<()>, objc2::__macros::KindDefined>`
  = note: required for `fn() -> Vec<()>` to implement `objc2::__macros::FnToExternFn<_::<impl ClassType for CustomObject>::class::{closure#0}::{closure#0}::__FnMarker, objc2::__macros::MethodFamily<6>, objc2::__macros::ClassFnKind<&AnyClass>, CustomObject>`
note: required by a bound in `objc2::__macros::ConvertDefinedFn::Func`
 --> $WORKSPACE/crates/objc2/src/__macros/define_class/thunk.rs
  |
  |     type Func: FnToExternFn<FnMarker, MethodFamily, Kind, Self>;
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ConvertDefinedFn::Func`
  = note: this error originates in the macro `$crate::__declare_class_register_thunk` which comes from the expansion of the macro `define_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Box<u32>: Encode` is not satisfied
 --> ui/define_class_invalid_type.rs
  |
  | / define_class!(
  | |     #[unsafe(super(NSObject))]
  | |     struct CustomObject;
... |
  | | );
  | |_^ the trait `Encode` is not implemented for `Box<u32>`
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `Box<u32>` to implement `EncodeArgument`
  = note: required for `Box<u32>` to implement `objc2::__macros::ConvertArgument`
  = note: required for `fn(&'__function CustomObject, Box<u32>)` to implement `objc2::__macros::FnToExternFn<_::<impl ClassType for CustomObject>::class::{closure#0}::{closure#0}::__FnMarker, objc2::__macros::MethodFamily<6>, objc2::__macros::MethodKind, CustomObject>`
note: required by a bound in `objc2::__macros::ConvertDefinedFn::Func`
 --> $WORKSPACE/crates/objc2/src/__macros/define_class/thunk.rs
  |
  |     type Func: FnToExternFn<FnMarker, MethodFamily, Kind, Self>;
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ConvertDefinedFn::Func`
  = note: this error originates in the macro `$crate::__declare_class_register_thunk` which comes from the expansion of the macro `define_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `CustomObject: Encode` is not satisfied
 --> ui/define_class_invalid_type.rs
  |
  | / define_class!(
  | |     #[unsafe(super(NSObject))]
  | |     struct CustomObject;
... |
  | | );
  | |_^ unsatisfied trait bound
  |
help: the trait `Encode` is not implemented for `CustomObject`
 --> ui/define_class_invalid_type.rs
  |
  | / define_class!(
  | |     #[unsafe(super(NSObject))]
  | |     struct CustomObject;
... |
  | | );
  | |_^
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `CustomObject` to implement `EncodeArgument`
  = note: required for `CustomObject` to implement `objc2::__macros::ConvertArgument`
  = note: required for `fn(&'__function CustomObject, CustomObject)` to implement `objc2::__macros::FnToExternFn<_::<impl ClassType for CustomObject>::class::{closure#0}::{closure#0}::__FnMarker, objc2::__macros::MethodFamily<6>, objc2::__macros::MethodKind, CustomObject>`
note: required by a bound in `objc2::__macros::ConvertDefinedFn::Func`
 --> $WORKSPACE/crates/objc2/src/__macros/define_class/thunk.rs
  |
  |     type Func: FnToExternFn<FnMarker, MethodFamily, Kind, Self>;
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ConvertDefinedFn::Func`
  = note: this error originates in the macro `$crate::__declare_class_register_thunk` which comes from the expansion of the macro `define_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Vec<()>: EncodeReturn` is not satisfied
 --> ui/define_class_invalid_type.rs
  |
  | / define_class!(
  | |     #[unsafe(super(NSObject))]
  | |     struct CustomObject;
... |
  | | );
  | |_^ the trait `Encode` is not implemented for `Vec<()>`
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `Vec<()>` to implement `EncodeReturn`
  = note: required for `Vec<()>` to implement `objc2::__macros::ConvertReturn<objc2::__macros::MethodFamily<6>>`
  = note: this error originates in the macro `$crate::__declare_class_register_thunk` which comes from the expansion of the macro `define_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Box<u32>: EncodeArgument` is not satisfied
 --> ui/define_class_invalid_type.rs
  |
  | / define_class!(
  | |     #[unsafe(super(NSObject))]
  | |     struct CustomObject;
... |
  | | );
  | |_^ the trait `Encode` is not implemented for `Box<u32>`
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `Box<u32>` to implement `EncodeArgument`
  = note: required for `Box<u32>` to implement `objc2::__macros::ConvertArgument`
  = note: this error originates in the macro `$crate::__declare_class_register_thunk` which comes from the expansion of the macro `define_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `CustomObject: EncodeArgument` is not satisfied
 --> ui/define_class_invalid_type.rs
  |
  | / define_class!(
  | |     #[unsafe(super(NSObject))]
  | |     struct CustomObject;
... |
  | | );
  | |_^ unsatisfied trait bound
  |
help: the trait `Encode` is not implemented for `CustomObject`
 --> ui/define_class_invalid_type.rs
  |
  | / define_class!(
  | |     #[unsafe(super(NSObject))]
  | |     struct CustomObject;
... |
  | | );
  | |_^
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `CustomObject` to implement `EncodeArgument`
  = note: required for `CustomObject` to implement `objc2::__macros::ConvertArgument`
  = note: this error originates in the macro `$crate::__declare_class_register_thunk` which comes from the expansion of the macro `define_class` (in Nightly builds, run with -Z macro-backtrace for more info)
